--- a/timeScale.html
+++ b/timeScale.html
@@ -39,6 +39,17 @@
                         .append("svg")
                         .attr("width", w)
                         .attr("height", h);
+
+
+            var timeScale1 = d3.time.scale()
+        		.domain([new Date(2020, 0, 1), new Date(2020, 0, 11)])
+        		.range([0, 10]);
+
+            console.log(timeScale1);
+            console.log(timeScale1(new Date(2020, 0, 6)))
+
+
+
         }
 
         makeRequest();
