--- a/bitcoinPriceHistory.html
+++ b/bitcoinPriceHistory.html
@@ -6,6 +6,22 @@
         <title>Template Loading D3</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
 
+        <style media="screen">
+            .axis path,
+            .axis line {
+                fill: none;
+                stroke: black;
+                shape-rendering: crispEdges;
+            }
+            /*.grid .tick {
+                stroke: lightgrey;
+                opacity: 0.7;
+            }
+            .grid path {
+                  stroke-width: 0;
+            }*/
+        </style>
+
     </head>
     <body>
 
@@ -30,8 +46,10 @@
         }
 
         function makeChart(response){
-            var w = 800;
-            var h = 500;
+            var w = window.innerWidth - 100;
+            var h = window.innerHeight - 100;
+            // var w = 1000;
+            // var h = 500;
             var padding = 20;
             var Lpadding = 45;
 
@@ -64,17 +82,15 @@
                             day.push(prop[j])
                         }
                     }
-                    // console.log("I DONT GET IT", month.join(""))
                     dates.push([Number(year.join("")), Number(month.join("")), Number(day.join(""))]);
 
                     returnData.push(
                         {
-                                        date: [Number(year.join("")), Number(month.join("")), Number(day.join(""))],
-                                        value: input[prop]
+                            date: [Number(year.join("")), Number(month.join("")), Number(day.join(""))],
+                            value: input[prop]
                         }
                     )
                 }
-                // console.log("YYYYYEEEEEHHHHAAAWWWW", returnData)
                 return returnData;
             }
 
@@ -88,25 +104,35 @@
                         .attr("width", w)
                         .attr("height", h);
 
+            // console.log(inputData)
+
             var y = d3.scale.linear()
+                            // .domain([d3.min(inputData, function(d){ return d.value; }), d3.max(inputData, function(d){ return d.value; })])
+                            // .domain([d3.extent(d3.values(inputData, function(d){ return d.value}))])
                             .domain([0, 5000])
                             .range([h - padding, padding])
 
+            // var yScale = d3.scale.linear()
+            //                 // .domain([0, 5000])
+            //                 .domain([d3.min(inputData, function(d){ return d.value; }), d3.max(inputData, function(d){ return d.value; })])
+            //                 // .domain([d3.extent(d3.values(inputData, function(d){ return d.value}))])
+            //                 .range([0, h])
 
             var x = d3.time.scale()
                                 .domain([new Date(2010, 7, 18), new Date(2017, 7, 18)])
                                 .range([Lpadding, w]);
 
-            // console.log("MIIIIIIRRRRRAAAAAAAAA.....:", x(new Date(2015, 0, 5)))
-
             var xAxis = d3.svg.axis()
                             .scale(x)
                             .orient("bottom")
-                            .ticks(5)
+                            .ticks(8)
 
             var yAxis = d3.svg.axis()
                             .scale(y)
-                            .orient("left");
+                            .orient("left")
+                            // .tickSize(-w, 0, 0)
+                            .ticks(8)
+
 
             svg.selectAll("circle")
                             .data(inputData)
@@ -114,21 +140,23 @@
                             .append("circle")
                             .attr("cx", function(d){
                                 let thisDate = x(new Date(d.date[0], d.date[1], d.date[2]))
-                                console.log("!!!!!!!!this TTTYYPIIEEE is DDDDDATE>>>:", thisDate);
                                 return thisDate;
                             })
                             .attr("cy", function(d, i){
-                                console.log("fffuuuuukkkkkk")
-                                return (h - d.value) - padding
+                                console.log("this is with yScale: ", y(d.value))
+                                console.log("Without: ", d.value)
+                                // return y(( d.value) - padding)
+                                return y(d.value);
+                                // return  y(d.value) - (h - padding)
                             })
                             .attr("r", function(d){
-                                return 2;
+                                return 1;
                             })
-                            .attr("fill", "black")
+                            .attr("fill", "red")
 
             svg.append("g")
                 .attr("class", "x axis")
-                .attr("transform", "translate(0, " + (h - padding) + ")")
+                .attr("transform", "translate(" + 0 + ", " + (h - padding) + ")")
                 .call(xAxis);
 
             svg.append("g")
