--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <title>BeautifulCrypto</title>
     </head>
     <body>
-        <h1>Wealcom to Beautiful Crypto, this is a div btw</h1>
+        <h1>Wealcom to Beautiful Crypto, this is a div btw jk its h1</h1>
 
-        <h2>Dem Charts</h2>
+        <h2>Dem Charts Grabbing Live Data From Different APIs</h2>
+        <h3>Mainly using coinmartcap APIs</h3>
         <ul>
             <li><a href="/coinMarketPie.html">Market Cap Pie Chart</a></li>
         </ul>
