linked all charts on index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <h3>Mainly using coinmartcap APIs</h3>
         <ul>
             <li><a href="/coinMarketPie.html">Market Cap Pie Chart</a></li>
+            <li><a href="/marketCapBubble.html">Market Cap Bubble Chart</a></li>
+            <li><a href="/top10marketcaps.html">Top 10 Market Caps</a></li>
+            <li><a href="/marketBarChart.html">Market Cap Bar Chart</a></li>
+            <li><a href="/bitcoinPriceHistory.html">History of Bitcoin price</a></li>
+
         </ul>
     </body>
 </html>
